--- a/synopsi-api/src/main/resources/static/index.html
+++ b/synopsi-api/src/main/resources/static/index.html
@@ -13,9 +13,11 @@
         <p class="subtitle">Personalized News & Learning Summarizer</p>
 
         <form id="loginForm">
+            <div id="errorMessage" class="error-message" style="display: none;"></div>
+
             <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
+                <label for="email">Email or Username</label>
+                <input type="text" id="email" name="email" required>
             </div>
 
             <div class="form-group">
@@ -23,32 +25,53 @@
                 <input type="password" id="password" name="password" required>
             </div>
 
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-primary" id="loginBtn">Login</button>
 
             <div class="auth-links">
                 <a href="register.html">Create account</a>
-                <a href="#" id="forgotPassword">Forgot password?</a>
+                <a href="forgot-password.html">Forgot password?</a>
             </div>
         </form>
     </div>
 </div>
 
+<script src="js/api.js"></script>
 <script src="js/auth.js"></script>
 <script>
-    document.getElementById('loginForm').addEventListener('submit', async (e) => {
+    const loginForm = document.getElementById('loginForm');
+    const loginBtn = document.getElementById('loginBtn');
+    const errorMessage = document.getElementById('errorMessage');
+
+    function showError(message) {
+        errorMessage.textContent = message;
+        errorMessage.style.display = 'block';
+    }
+
+    function hideError() {
+        errorMessage.style.display = 'none';
+    }
+
+    loginForm.addEventListener('submit', async (e) => {
         e.preventDefault();
-        const email = document.getElementById('email').value;
+        hideError();
+
+        const usernameOrEmail = document.getElementById('email').value;
         const password = document.getElementById('password').value;
-        console.log('Login attempt:', email);
-        // Simulate success for now
-        localStorage.setItem('token', 'mock-jwt-token');
-        window.location.href = 'dashboard.html';
+
+        loginBtn.disabled = true;
+        loginBtn.textContent = 'Logging in...';
+
+        try {
+            await api.login(usernameOrEmail, password);
+            window.location.href = 'dashboard.html';
+        } catch (error) {
+            showError(error.message || 'Login failed. Please check your credentials.');
+            loginBtn.disabled = false;
+            loginBtn.textContent = 'Login';
+        }
     });
 
-    document.getElementById('forgotPassword').addEventListener('click', (e) => {
-        e.preventDefault();
-        alert('Password reset feature - API integration in next step');
-    });
+
 </script>
 </body>
 </html>
