--- a/synopsi-api/src/main/resources/static/settings.html
+++ b/synopsi-api/src/main/resources/static/settings.html
@@ -24,6 +24,9 @@
     <div class="card">
         <h3>Change Password</h3>
         <form id="changePasswordForm">
+            <div id="errorMessage" class="error-message" style="display: none;"></div>
+            <div id="successMessage" class="success-message" style="display: none;"></div>
+
             <div class="form-group">
                 <label for="currentPassword">Current Password</label>
                 <input type="password" id="currentPassword" required>
@@ -39,33 +42,74 @@
                 <input type="password" id="confirmNewPassword" required>
             </div>
 
-            <button type="submit" class="btn btn-primary">Update Password</button>
+            <button type="submit" class="btn btn-primary" id="changePasswordBtn">Update Password</button>
         </form>
     </div>
 </div>
 
-<script src="js/auth.js"></script>
 <script src="js/api.js"></script>
+<script src="js/auth.js"></script>
 <script>
     checkAuth();
+
+    const changePasswordForm = document.getElementById('changePasswordForm');
+    const changePasswordBtn = document.getElementById('changePasswordBtn');
+    const errorMessage = document.getElementById('errorMessage');
+    const successMessage = document.getElementById('successMessage');
+
+    function showError(message) {
+        errorMessage.textContent = message;
+        errorMessage.style.display = 'block';
+        successMessage.style.display = 'none';
+    }
+
+    function showSuccess(message) {
+        successMessage.textContent = message;
+        successMessage.style.display = 'block';
+        errorMessage.style.display = 'none';
+    }
+
+    function hideMessages() {
+        errorMessage.style.display = 'none';
+        successMessage.style.display = 'none';
+    }
 
     document.getElementById('logout').addEventListener('click', (e) => {
         e.preventDefault();
         logout();
     });
 
-    document.getElementById('changePasswordForm').addEventListener('submit', async (e) => {
+    changePasswordForm.addEventListener('submit', async (e) => {
         e.preventDefault();
+        hideMessages();
+
+        const currentPassword = document.getElementById('currentPassword').value;
         const newPassword = document.getElementById('newPassword').value;
         const confirmNewPassword = document.getElementById('confirmNewPassword').value;
 
         if (newPassword !== confirmNewPassword) {
-            alert('Passwords do not match');
+            showError('New passwords do not match');
             return;
         }
 
-        console.log('Password change request');
-        alert('Password updated successfully');
+        if (newPassword.length < 8) {
+            showError('Password must be at least 8 characters');
+            return;
+        }
+
+        changePasswordBtn.disabled = true;
+        changePasswordBtn.textContent = 'Updating...';
+
+        try {
+            await api.changePassword(currentPassword, newPassword);
+            showSuccess('Password updated successfully!');
+            changePasswordForm.reset();
+        } catch (error) {
+            showError(error.message || 'Failed to update password');
+        } finally {
+            changePasswordBtn.disabled = false;
+            changePasswordBtn.textContent = 'Update Password';
+        }
     });
 </script>
 </body>
