--- a/synopsi-api/src/main/resources/static/sources.html
+++ b/synopsi-api/src/main/resources/static/sources.html
@@ -5,6 +5,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Synopsi - Manage Sources</title>
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+        .source-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1rem;
+            border: 1px solid var(--border-color, #ddd);
+            border-radius: 8px;
+            margin-bottom: 1rem;
+            background: var(--card-bg, #fff);
+        }
+
+        .source-info {
+            flex: 1;
+        }
+
+        .source-info h4 {
+            margin: 0 0 0.5rem 0;
+            color: var(--text-dark, #333);
+        }
+
+        .source-info .source-url {
+            color: var(--text-light, #666);
+            text-decoration: none;
+            font-size: 0.9rem;
+            display: block;
+            margin-bottom: 0.25rem;
+        }
+
+        .source-info .source-url:hover {
+            text-decoration: underline;
+        }
+
+        .source-meta {
+            display: flex;
+            gap: 1rem;
+            align-items: center;
+            font-size: 0.85rem;
+            color: var(--text-light, #666);
+            margin-top: 0.5rem;
+        }
+
+        .source-badge {
+            display: inline-block;
+            padding: 0.25rem 0.75rem;
+            border-radius: 12px;
+            font-size: 0.75rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            background: var(--primary-color, #007bff);
+            color: white;
+        }
+
+        .source-badge.inactive {
+            background: var(--danger-color, #dc3545);
+        }
+
+        .source-actions {
+            display: flex;
+            gap: 0.5rem;
+        }
+
+        .source-list {
+            margin-top: 1rem;
+        }
+
+        .form-row {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 1rem;
+        }
+
+        @media (max-width: 768px) {
+            .form-row {
+                grid-template-columns: 1fr;
+            }
+
+            .source-item {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
+            .source-actions {
+                margin-top: 1rem;
+                width: 100%;
+            }
+        }
+    </style>
 </head>
 <body>
 <nav class="navbar">
@@ -19,22 +107,52 @@
 </nav>
 
 <div class="container">
-    <h2>Manage RSS Feeds</h2>
+    <h2>Manage Sources</h2>
 
     <div class="card">
-        <h3>Add New Source</h3>
+        <h3 id="formTitle">Add New Source</h3>
         <form id="addSourceForm">
+            <input type="hidden" id="sourceId">
+
             <div class="form-group">
-                <label for="sourceName">Source Name</label>
-                <input type="text" id="sourceName" required>
+                <label for="sourceName">Source Name *</label>
+                <input type="text" id="sourceName" required placeholder="e.g., TechCrunch">
             </div>
 
             <div class="form-group">
-                <label for="sourceUrl">RSS Feed URL</label>
-                <input type="url" id="sourceUrl" required placeholder="https://example.com/feed.xml">
+                <label for="sourceUrl">Base URL *</label>
+                <input type="url" id="sourceUrl" required placeholder="https://example.com/rss">
             </div>
 
-            <button type="submit" class="btn btn-primary">Add Source</button>
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="sourceType">Source Type (optional)</label>
+                    <select id="sourceType">
+                        <option value="">-- Select Type --</option>
+                        <option value="NEWS">News</option>
+                        <option value="BLOG">Blog</option>
+                        <option value="ACADEMIC">Academic</option>
+                        <option value="MAGAZINE">Magazine</option>
+                        <option value="PODCAST">Podcast</option>
+                        <option value="VIDEO">Video</option>
+                        <option value="RSS">RSS</option>
+                        <option value="OTHER">Other</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="isActive">Status</label>
+                    <select id="isActive">
+                        <option value="true">Active</option>
+                        <option value="false">Inactive</option>
+                    </select>
+                </div>
+            </div>
+
+            <div style="display: flex; gap: 0.5rem;">
+                <button type="submit" class="btn btn-primary" id="submitBtn">Add Source</button>
+                <button type="button" class="btn btn-secondary" id="cancelBtn" style="display: none;" onclick="cancelEdit()">Cancel</button>
+            </div>
         </form>
     </div>
 
