--- a/synopsi-api/src/main/resources/static/dashboard.html
+++ b/synopsi-api/src/main/resources/static/dashboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Synopsi - Dashboard</title>
     <link rel="stylesheet" href="css/styles.css">
-</head>
+   </head>
 <body>
 <nav class="navbar">
     <div class="nav-brand">Synopsi</div>
@@ -19,21 +19,19 @@
 </nav>
 
 <div class="dashboard-layout">
-    <aside class="sidebar">
-        <h3>Topics</h3>
-        <div id="topicList" class="topic-list">
-            <button class="topic-tag active" data-topic="all">All Topics</button>
-        </div>
-    </aside>
-
     <main class="main-content">
         <div class="content-header">
             <h2>Your Personalized Feed</h2>
+            <div class="topic-filter">
+                <select id="topicSelect">
+                    <option value="all">Filter by Topic</option>
+                </select>
+            </div>
         </div>
 
         <div id="feedContainer" class="feed-container"></div>
 
-        <div id="emptyState" class="empty-state" style="display: none;">
+        <div id="emptyState" class="empty-state">
             <h3>No summaries yet</h3>
             <p>Add RSS feeds to get started</p>
             <a href="sources.html" class="btn btn-primary">Add Feeds</a>
