--- a/synopsi-api/src/main/resources/static/index.html
+++ b/synopsi-api/src/main/resources/static/index.html
@@ -37,41 +37,6 @@
 
 <script src="js/api.js"></script>
 <script src="js/auth.js"></script>
-<script>
-    const loginForm = document.getElementById('loginForm');
-    const loginBtn = document.getElementById('loginBtn');
-    const errorMessage = document.getElementById('errorMessage');
-
-    function showError(message) {
-        errorMessage.textContent = message;
-        errorMessage.style.display = 'block';
-    }
-
-    function hideError() {
-        errorMessage.style.display = 'none';
-    }
-
-    loginForm.addEventListener('submit', async (e) => {
-        e.preventDefault();
-        hideError();
-
-        const usernameOrEmail = document.getElementById('email').value;
-        const password = document.getElementById('password').value;
-
-        loginBtn.disabled = true;
-        loginBtn.textContent = 'Logging in...';
-
-        try {
-            await api.login(usernameOrEmail, password);
-            window.location.href = 'dashboard.html';
-        } catch (error) {
-            showError(error.message || 'Login failed. Please check your credentials.');
-            loginBtn.disabled = false;
-            loginBtn.textContent = 'Login';
-        }
-    });
-
-
-</script>
+<script src="js/login.js"></script>
 </body>
 </html>
