--- a/synopsi-api/src/main/resources/static/dashboard.html
+++ b/synopsi-api/src/main/resources/static/dashboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Synopsi - Dashboard</title>
     <link rel="stylesheet" href="css/styles.css">
-   </head>
+</head>
 <body>
 <nav class="navbar">
     <div class="nav-brand">Synopsi</div>
@@ -20,6 +20,8 @@
 
 <div class="dashboard-layout">
     <main class="main-content">
+        <div id="errorMessage" class="error-message"></div>
+
         <div class="content-header">
             <h2>Your Personalized Feed</h2>
             <div class="topic-filter">
